# autoaim

armor_det/: CMakeLists.txt  package.xml
armor_det/include/armor_det/: tools.hpp
armor_det/src/: armor_det_node.cpp  tools.cpp
armor_det_postprocess/: package.xml  setup.cfg  setup.py
armor_det_postprocess/armor_det_postprocess/: postprocess_node.py
auto_aim_interface/: CMakeLists.txt  package.xml
auto_aim_interface/msg/: CameraImage.msg
mindvision_camera/: CMakeLists.txt  package.xml
mindvision_camera/src/: camera_catch_node.cpp
